# ackermann_vehicle

ackermann_vehicle/: package.xml
ackermann_vehicle_description/: CMakeLists.txt
ackermann_vehicle_description/launch/: autoRallyPlatform.launch
ackermann_vehicle_description/urdf/: 5scChassis.stl  autoRallyPlatform.urdf.xacro  autoRallyTrack.urdf  em_3905.urdf.xacro  jump22deg.dae  jump22deg.urdf  jump30deg.stl  jump30deg.urdf  track.urdf
ackermann_vehicle_gazebo/: CMakeLists.txt
ackermann_vehicle_gazebo/config/: em_3905_ackermann_ctrlr_params.yaml  em_3905_joint_ctrlr_params.yaml
ackermann_vehicle_gazebo/launch/: ackermann_vehicle.launch  autoRallyPlatform.launch  autoRallyWorld.launch  empty_world.launch  joystickAckermann.launch
ackermann_vehicle_gazebo/nodes/: ackermann_controller.py  autoRally_controller.py  joystickAckermann.py  talker.py  wheelSpeedsGazebo.py
auto_rally_platform_description/: CMakeLists.txt  package.xml
auto_rally_platform_description/launch/: autoRallyPlatformRviz.launch
auto_rally_platform_description/urdf/: jump22deg.stl
auto_rally_platform_gazebo/: CMakeLists.txt  package.xml
auto_rally_platform_gazebo/config/: autoRallyPlatformCtrlrParams.yaml  autoRallyPlatformJointCtrlrParams.yaml
auto_rally_platform_gazebo/launch/: autoRallyJumpGazeboSim.launch  autoRallyJumpWorld.launch  autoRallyTrackGazeboSim.launch  autoRallyTrackWorld.launch
