<?xml version="1.0"?>
<package>
  <name>auto_rally_platform_gazebo</name>
  <version>0.1.1</version>
  <description>
    auto_rally_platform_gazebo is used with Gazebo to simulate the AutoRally
    platform. This package was adapted from ackermann_vehicle_gazebo. This 
    package retains the original Apache License Version 2.0.
  </description>
  <!--
    Copyright (c) 2015 Georgia Institute of Technology

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
  -->
  <maintainer email="bgoldfain3@gatech.edu">
    Brian Goldfain
  </maintainer>
  <license>Apache 2.0</license>

  <author email="bgoldfain3@gatech.edu">Brian Goldfain</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>ackermann_msgs</run_depend>
  <run_depend>ackermann_vehicle_description</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>xacro</run_depend>

</package>
